(lang dune 3.15)

(name ft_turing)

(generate_opam_files true)

(source
 (github blu-ea/ft_turing))

(authors "Blu_ea")

(maintainers "Blu_ea")

(license LICENSE)

; (documentation https://url/to/documentation) ; wont be done

(package
 (name ft_turing)
 (synopsis "42 ft_turing")
 (description "A turing machine from the 42 school project")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
